kong/routes/order-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-route
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /order
    backendRefs:
    - name: order-service
      kind: Service
      port: 3000
