kong/routes/supergraph-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: supergraph-route
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /graphql/v0
      method: POST
    backendRefs:
    - name: supergraph-service
      kind: Service
      port: 3000
